Changes in quota-tools from 3.17 to 4.00-pre2
* create quota-nfs.sh script for nicer quota(1) output formatting on some NFS clients (Jan Kara)
* add options for quota(1) modifying formatting of filesystem identificaion (Jan Kara)
* minor updates of manpages (Jan Kara)
* quotactl manpage was moved to man-pages package (Jan Kara)
* fix quotaon to work properly with XFS filesystems (Eric Sandeen, Jan Kara )
* fix quotaon to print all informational messages only in verbose mode (Jan Kara)
* fix warnquota manpage to not speak about RPC (Jan Kara)
* fix repquota to get latest quota info header (Jan Kara)
* do not count system inodes into quota for ext[234] (Jan Kara)
* improve detection of XFS kernel quota interface (Jan Kara)
* support of GFS2 filesystem (Christoph Hellwig)
* avoid memory corruption of NULL address (Petr Pisar)
* fixup typos in manpages (Michael Meskes)
* added german translation (Michael Bunk)
* added --enable-static-link configure option (Jan Kara)

Changes in quota-tools from 3.17 to 4.00-pre1
* don't try to set inode flags when getting them failed (Michalski Wojciech)
* added liblber to the list of libraries needed for LDAP support (Michael Meskes)
* Rewritten configuration script to create config.h (Jan Kara)
* Use /proc/mounts for mountpoint scanning (Jan Kara)
* Removed use of reserved identifiers (Jan Kara)
* Improved manpage of quota_nld (Eddie Eyles)
* Fixed long option handling of quota_nld (Jan Kara)
* Fixed error reporting when rpc format specified on command line (Jan Kara)
* Convert quota limits using rq_bsize from RPC request (Jan Kara)
* Added noreturn attribute to die to avoid false warnings (Jan Kara)
* 64-bit quota support, rewritten some code to allow clean integration (Jan Kara)
* Improved header of quota an repquota output when -s option is used (Jan Kara)
* Fixed mountpoint scanning when NFS mountpoint is specified on command line (Jan Kara)
* Updated manpage of quotactl(2) (Jan Kara)

Changes in quota-tools from 3.16 to 3.17